--- a/cadastrar.html
+++ b/cadastrar.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Sistema de Jogadores" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Cadastrar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">  
     <style>
-        body {
 
+        body {
                 background-image: url("https://cdn.pixabay.com/photo/2022/09/13/03/07/bob-marley-7450792_1280.jpg");
                 background-size: cover;
                 background-position: center center;
-                height: 200vh;
-                margin: 0; 
+                height:180vh;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
             }
+
     </style>
-    
+      
 </head>
 <body>
     <div class="container mt-5">
-        <h2>Cadastro</h2>
+        <h2>Cadastrar</h2>
         <form>
             <div class="mb-3">
                 <label for="cadastro-email" class="form-label">Email</label>
