--- a/login.html
+++ b/login.html
@@ -6,15 +6,20 @@
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
 
+        body {
                 background-image: url("https://cdn.pixabay.com/photo/2022/09/13/03/07/bob-marley-7450792_1280.jpg");
                 background-size: cover;
                 background-position: center center;
-                height: 200vh;
-                margin: 0; 
+                height:180vh;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
             }
+            
     </style>
+    
 </head>
 <body>
     <div class="container mt-5">
