Padronizando todas as páginas, padronização de navbar, body e backgrounds.

--- a/resultados.html
+++ b/resultados.html
@@ -94,6 +94,7 @@
         <ul>
             <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/PaginaPrincipal.html">🏠 Início</a></li>
             <a href="file:///C:/dev/project/SistemaJogadores/front-end/contatos.html">📞 Contato</a>
+            <a href="file:///C:/dev/project/SistemaJogadores/front-end/paginajogadores.html">Jogadores</a>
         </ul>
     </nav>
 
