Padronização dos navbar das páginas de jogadores, resultados e contatos.

--- a/resultados.html
+++ b/resultados.html
@@ -11,7 +11,7 @@
             * { box-sizing: border-box; margin: 0; padding: 0; }
             body { 
                 font-family: 'Poppins', sans-serif; 
-                background: linear-gradient(145deg, #1e293b, #334155);
+                background: linear-gradient(145deg, #606c88, #3f4c6b);
                 padding: 20px;
                 color: #f8fafc;
             }
@@ -28,7 +28,7 @@
             .navbar ul { 
                 list-style: none; 
                 display: flex; 
-                gap: 15px; 
+                gap: 40px; 
             }
             .navbar ul li { 
                 padding: 10px 15px; 
@@ -94,7 +94,7 @@
         <ul>
             <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/PaginaPrincipal.html">🏠 Início</a></li>
             <a href="file:///C:/dev/project/SistemaJogadores/front-end/contatos.html">📞 Contato</a>
-            <a href="file:///C:/dev/project/SistemaJogadores/front-end/paginajogadores.html">Jogadores</a>
+            <a href="file:///C:/dev/project/SistemaJogadores/front-end/paginajogadores.html">🏃‍♂️ Jogadores</a>
         </ul>
     </nav>
 
