--- a/contatos.html
+++ b/contatos.html
@@ -12,25 +12,127 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Poppins', sans-serif; background-color: #0f172a; padding: 20px; color: #fff; }
-        .navbar { background-color: #1e293b; padding: 15px; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); 
-            margin-bottom: 30px; display: flex; justify-content: space-between; align-items: center; }
-        .navbar h2 { color: #3b82f6; font-weight: 700; }
-        .navbar ul { list-style: none; display: flex; gap: 15px; }
-        .navbar ul li { padding: 10px 15px; border-radius: 8px; background-color: #334155; cursor: pointer; transition: background-color 0.3s ease, transform 0.2s ease; }
-        .navbar ul li:hover { background-color: #3b82f6; transform: scale(1.1); }
-        .navbar a { text-decoration: none; color: #fff; padding: 10px 15px; 
-            border-radius: 8px; background-color: #334155; transition: background-color 0.3s ease, transform 0.2s ease; }
-        .navbar a:hover { background-color: #3b82f6; transform: scale(1.1); }
-        .container { max-width: 600px; margin: 0 auto; background: #1e293b; padding: 30px; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); }
-        h1 { text-align: center; color: #3b82f6; margin-bottom: 20px; }
-        label { display: block; margin-top: 15px; font-weight: 500; }
-        input, textarea { width: 100%; padding: 15px; margin-top: 10px; border: none; border-radius: 8px; background-color: #334155; color: #fff; font-size: 1rem; }
-        input::placeholder, textarea::placeholder { color: #94a3b8; }
-        button { background-color: #3b82f6; color: #fff; padding: 15px; border: none; border-radius: 8px; cursor: pointer; margin-top: 20px; 
-            font-size: 1.2rem; font-weight: 700; transition: background-color 0.3s ease; }
-        button:hover { background-color: #60a5fa; }
-        footer { text-align: center; margin-top: 20px; color: #94a3b8; font-size: 0.9rem; }
+
+        body { 
+
+            font-family: 'Poppins', sans-serif; 
+            background-color: #0f172a; 
+            padding: 20px; 
+            color: #fff; 
+        }
+        .navbar { 
+
+            background-color: #1e293b; 
+            padding: 15px; 
+            border-radius: 16px; 
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); 
+            margin-bottom: 30px; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            width: 100%;
+        }
+        .navbar h2 { 
+
+            color: #3b82f6; 
+            font-weight: 700; 
+        }
+        .navbar ul { 
+
+            list-style: none; 
+            display: flex; 
+            gap: 15px; 
+        }
+        .navbar ul li { 
+
+            padding: 10px 15px; 
+            border-radius: 8px; 
+            background-color: #334155; 
+            cursor: pointer; 
+            transition: background-color 0.3s ease, transform 0.2s ease; 
+
+        }
+        .navbar ul li:hover { 
+
+            background-color: #3b82f6; 
+            transform: scale(1.1); 
+        }
+        .navbar a { 
+            text-decoration: none; 
+            color: #fff; 
+            padding: 10px 15px; 
+            border-radius: 8px; 
+            background-color: #334155; 
+            transition: background-color 0.3s ease, transform 0.2s ease; 
+        }
+        .navbar a:hover { 
+
+            background-color: #3b82f6; 
+            transform: scale(1.1); 
+        }
+        .container { 
+
+            max-width: 600px; 
+            margin: 0 auto; 
+            background: #1e293b; 
+            padding: 30px; 
+            border-radius: 16px; 
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); 
+        }
+
+        h1 { 
+            text-align: center; 
+            color: #3b82f6; 
+            margin-bottom: 20px; 
+        }
+
+        label { 
+            display: block; 
+            margin-top: 15px; 
+            font-weight: 500; 
+        }
+
+        input, textarea { 
+
+            width: 100%; 
+            padding: 15px; 
+            margin-top: 10px; 
+            border: none; 
+            border-radius: 8px; 
+            background-color: #334155; color: #fff; font-size: 1rem; 
+        }
+
+        input::placeholder, textarea::placeholder { 
+
+            color: #94a3b8; 
+        }
+
+        button { 
+
+            background-color: #3b82f6; 
+            color: #fff; 
+            padding: 15px; 
+            border: none; 
+            border-radius: 8px; 
+            cursor: pointer; 
+            margin-top: 20px; 
+            font-size: 1.2rem; 
+            font-weight: 700; 
+            transition: background-color 0.3s ease; 
+        }
+
+        button:hover { 
+
+            background-color: #60a5fa; 
+        }
+
+        footer { 
+
+            text-align: center; 
+            margin-top: 20px; 
+            color: #94a3b8; 
+            font-size: 0.9rem; 
+        }
     </style>
 </head>
 <body>
