--- a/paginajogadores.html
+++ b/paginajogadores.html
@@ -9,7 +9,7 @@
 *       * { box-sizing: border-box; margin: 0; padding: 0; }
         body { 
             font-family: 'Poppins', sans-serif; 
-            background: linear-gradient(145deg, #1e293b, #334155);
+            background: linear-gradient(145deg, #606c88, #3f4c6b);
             padding: 20px;
             color: #f8fafc;
         }
@@ -21,23 +21,24 @@
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
             margin-bottom: 30px; 
             display: flex; 
+            gap: 25px;
             justify-content: center; 
             align-items: center; 
-            width: 100vw;
             position: fixed;
             top: 0;
             left: 0;
             z-index: 3;
+            width: 100vw;
         }
 
         .navbar ul { 
             list-style: none; 
             display: flex; 
-            gap: 15px; 
+            gap: 40px; 
         }
 
         .navbar ul li { 
-            padding: 10px 15px; 
+            padding: 20px 25px; 
             border-radius: 8px; 
             background-color: #334155; 
             cursor: pointer; 
@@ -89,9 +90,8 @@
             border: 1px solid #ddd;
         }
 
-        /* Efeito para destacar toda a linha ao passar o mouse */
         table tr:hover {
-            background-color: rgba(59, 130, 246, 0.2); /* Cor de fundo ao passar o mouse */
+            background-color: rgba(59, 130, 246, 0.2);
             transition: background-color 0.3s ease;
         }
 
