--- a/resultados.html
+++ b/resultados.html
@@ -24,6 +24,8 @@
                 display: flex; 
                 justify-content: center; 
                 align-items: center; 
+                border-bottom: 2px solid #ddad28;
+                border: 2px solid #ddad28;
             }
             .navbar ul { 
                 list-style: none; 
