--- a/contatos.html
+++ b/contatos.html
@@ -31,6 +31,8 @@
             justify-content: center; 
             align-items: center; 
             width: 100%;
+            border-bottom: 2px solid #ddad28;
+            border: 2px solid #ddad28;
         }
         .navbar h2 { 
 
