--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <style>
 
         body {
-                background-image: url("https://cdn.pixabay.com/photo/2019/05/03/17/43/flag-4176448_1280.jpg");
+                background: linear-gradient(145deg, #606c88, #3f4c6b);
                 background-size: cover;
                 background-position: center center;
                 height:180vh;
