--- a/paginajogadores.html
+++ b/paginajogadores.html
@@ -29,6 +29,8 @@
             left: 0;
             z-index: 3;
             width: 100vw;
+            border-bottom: 2px solid #ddad28;
+            border: 2px solid #ddad28;
         }
 
         .navbar ul { 
