--- a/paginajogadores.html
+++ b/paginajogadores.html
@@ -92,10 +92,6 @@
             border: 1px solid #ddd;
         }
 
-        table tr:hover {
-            background-color: rgba(59, 130, 246, 0.2);
-            transition: background-color 0.3s ease;
-        }
 
     </style>
 
@@ -104,7 +100,7 @@
 <body>
 
     <div class="logo">
-        <img src="file:///C:/Users/Matheus/Pictures/MArapé%20f.c.png" alt="Logo do Marapé FC">
+        <img src="C:\Users\Matheus\Pictures\times\marape.png" alt="Logo do Marapé FC">
     </div>
 
     <h1> 🏅 ATLETAS MARAPÉ FUTEBOL CLUBE 🏅 </h1>
