--- a/resultados.html
+++ b/resultados.html
@@ -19,13 +19,17 @@
                 background-color: #1e293b; 
                 padding: 15px; 
                 border-radius: 16px; 
-                box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-                margin-bottom: 30px; 
-                display: flex; 
-                justify-content: center; 
-                align-items: center; 
+                box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); 
+                width: 100%;
                 border-bottom: 2px solid #ddad28;
                 border: 2px solid #ddad28;
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 1000;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
             .navbar ul { 
                 list-style: none; 
@@ -57,7 +61,7 @@
             }
             h1 { 
                 text-align: center; 
-                margin-top: 20px;
+                margin-top: 100px; /* Aumentado para dar espaço */
                 margin-bottom: 20px;
                 font-size: 2.5rem;
                 letter-spacing: 2px;
@@ -65,7 +69,7 @@
             table {
                 width: 90vw;
                 max-width: 1200px;
-                margin: 0 auto;
+                margin: 100px auto 0; /* Espaçamento superior de 100px */
                 border-collapse: collapse;
                 background-color: #1e293b;
                 border-radius: 20px;
@@ -88,6 +92,7 @@
                 border-radius: 50%;
                 object-fit: cover;
             }
+
         </style>
     </head>
     <body>
@@ -112,29 +117,29 @@
         </thead>
         <tbody>
             <tr>
-                <td><img src="file:///C:/Users/Matheus/Pictures/MArap%C3%A9%20f.c.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
                 <td>2 - 1</td>
-                <td><img src="file:///C:/Users/Matheus/Pictures/duque%20de%20caxias.png"> Duque de Caxias F.C</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\duque.png"> Duque de Caxias F.C</td>
             </tr>
             <tr>
-                <td><img src="file:///C:/Users/Matheus/Pictures/paulista.png"> Paulista Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\paulista.png"> Paulista Futebol Clube</td>
                 <td>3 - 3</td>
-                <td><img src="file:///C:/Users/Matheus/Pictures/MArap%C3%A9%20f.c.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
             </tr>
             <tr>
-                <td><img src="file:///C:/Users/Matheus/Pictures/MArap%C3%A9%20f.c.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
                 <td>2 - 1</td>
-                <td><img src="file:///C:/Users/Matheus/Pictures/américa.png"> América Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\america.png"> América Futebol Clube</td>
             </tr>
             <tr>
-                <td><img src="file:///C:/Users/Matheus/Pictures/Atibaia.png"> Atibaia Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\atibaia.png"> Atibaia Futebol Clube</td>
                 <td>2 - 5</td>
-                <td><img src="file:///C:/Users/Matheus/Pictures/MArap%C3%A9%20f.c.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
             </tr>
             <tr>
-                <td><img src="file:///C:/Users/Matheus/Pictures/taubaté.png"> Taubaté Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\taubate.png"> Taubaté Futebol Clube</td>
                 <td>4 - 2</td>
-                <td><img src="file:///C:/Users/Matheus/Pictures/MArap%C3%A9%20f.c.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
             </tr>
         </tbody>
     </table>
