--- a/templateLogado.html
+++ b/templateLogado.html
@@ -77,7 +77,7 @@
         /* Já existente: Navbar fixa */
         .navbar { 
             background-color: #1e293b; 
-            padding: 15px; 
+            padding: 10px; 
             border-radius: 16px; 
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
             margin-bottom: 30px; 
@@ -95,10 +95,10 @@
         .navbar ul { 
             list-style: none; 
             display: flex; 
-            gap: 40px; 
+            gap: 15px; 
         }
         .navbar ul li { 
-            padding: 10px 15px; 
+            padding: 10px 10px; 
             border-radius: 8px; 
             background-color: #334155; 
             cursor: pointer; 
@@ -122,7 +122,24 @@
         }
 
         .news-item strong {
-            color: rgb(207, 228, 92); /* Altera a cor do texto dentro de <strong> */
+            color: rgb(207, 231, 71); /* Altera a cor do texto dentro de <strong> */
+        }
+
+        /* Estilizando o main */
+        main#content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Centraliza verticalmente */
+            align-items: center;    /* Centraliza horizontalmente */
+            min-height: 60vh;       /* Garante um espaço significativo na tela */
+            padding: 20px;
+        }
+
+        /* Centralizando o H2 dentro do main */
+        main#content h2 {
+            text-align: center;      /* Centraliza o texto horizontalmente */
+            font-size: 2rem;         /* Tamanho maior para melhor destaque */
+            margin-bottom: 10px;     /* Espaçamento inferior para separar do parágrafo */
         }
     </style>
 </head>
@@ -135,9 +152,9 @@
                 <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/paginajogadores.html" onclick="loadPage('paginajogadores.html')">🏃‍♂️ Jogadores</a></li>
                 <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/resultados.html" onclick="loadPage('resultados.html')">📅 Resultados</a></li>
                 <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/contatos.html" onclick="loadPage('contatos.html')">📞 Contatos</a></li>
-                <li><a href="#" onclick="loadPage('contatos.html')">🗓️ Agenda de treinos</a></li>
-                <li><a href="#" onclick="loadPage('contatos.html')">🏟️ Próximos Jogos</a></li>
-                <li><a href="#" onclick="loadPage('contatos.html')">📅 Tabela Campeonato</a></li>
+                <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/agendadetreinos.html" onclick="loadPage('agendadetreinos.html')">🗓️ Agenda de treinos</a></li>
+                <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/proximosjogos.html" onclick="loadPage('contatos.html')">🏟️ Próximos Jogos</a></li>
+                <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/tabelacampeonato.html" onclick="loadPage('contatos.html')">📅 Tabela Campeonato</a></li>
             </ul>
         </nav>
     
@@ -162,28 +179,28 @@
         <h3>Últimas Notícias</h3>
 
         <div class="news-item">
-            <p><strong>Novidade no time!</strong> O Marapé Futebol Clube anuncia novos reforços para a próxima temporada. Fique atento às atualizações!</p>
+            <p><strong>NOVIDADE NO TIME!</strong> O Marapé Futebol Clube anuncia novos reforços para a próxima temporada. Fique atento às atualizações!</p>
         </div>
 
         <div class="news-item">
-            <p><strong>Jogo importante!</strong> Nosso próximo jogo será contra o time rival no estádio Marapé. Não perca!</p>
+            <p><strong>JOGO IMPORTANTE!</strong> Nosso próximo jogo será contra o time rival no estádio Marapé. Não perca!</p>
         </div>
 
         <div class="news-item">
-            <p><strong>Participe do evento!</strong> Não perca nosso evento beneficente neste fim de semana. Toda a renda será destinada à manutenção do clube.</p>
+            <p><strong>PARTICIPE DO EVENTO!</strong> Não perca nosso evento beneficente neste fim de semana. Toda a renda será destinada à manutenção do clube.</p>
         </div>
 
         <div class="news-item">
-            <p><strong>Gustavo Sato:</strong> Jogador Gustavo Sato sofre lesão grave no joelho e está fora do clássico no próximo jogo.</p>
+            <p><strong>GUSTAVO SATO:</strong> Jogador Gustavo Sato sofre lesão grave no joelho e está fora do clássico no próximo jogo.</p>
         </div>
 
         <div class="news-item">
-            <p><strong>Ùltimo Jogo:</strong> Marapé Futebol Clube conquista mais uma vitória importante dentro de casa contra 
+            <p><strong>ÙLTIMO JOGO:</strong> Marapé Futebol Clube conquista mais uma vitória importante dentro de casa contra 
                 o Duque de Caxias e garante mais 3 pontos na Tabela.</p>
         </div>
 
         <div class="news-item">
-            <p><strong>Agenda de treinos:</strong> Confira nossa agenda de treinos para o mês de abril. Vamos nos preparar para os próximos desafios!</p>
+            <p><strong>AGENDA DE TREINOS:</strong> Confira nossa agenda de treinos para o mês de abril. Vamos nos preparar para os próximos desafios!</p>
         </div>
 
     </div>
