--- a/resultados.html
+++ b/resultados.html
@@ -17,7 +17,7 @@
             }
             .navbar { 
                 background-color: #1e293b; 
-                padding: 15px; 
+                padding: 8px; 
                 border-radius: 16px; 
                 box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); 
                 width: 100%;
@@ -34,10 +34,10 @@
             .navbar ul { 
                 list-style: none; 
                 display: flex; 
-                gap: 40px; 
+                gap: 15px; 
             }
             .navbar ul li { 
-                padding: 10px 15px; 
+                padding: 10px 10px; 
                 border-radius: 8px; 
                 background-color: #334155; 
                 cursor: pointer; 
@@ -99,9 +99,12 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/PaginaPrincipal.html">🏠 Início</a></li>
-            <a href="file:///C:/dev/project/SistemaJogadores/front-end/contatos.html">📞 Contato</a>
-            <a href="file:///C:/dev/project/SistemaJogadores/front-end/paginajogadores.html">🏃‍♂️ Jogadores</a>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/templateLogado.html#" onclick="loadPage('inicio.html')">🏠 Ínicio</a></li>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/paginajogadores.html" onclick="loadPage('paginajogadores.html')">🏃‍♂️ Jogadores</a></li>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/contatos.html" onclick="loadPage('contatos.html')">📞 Contatos</a></li>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/agendadetreinos.html" onclick="loadPage('agendadetreinos.html')">🗓️ Agenda de treinos</a></li>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/proximosjogos.html" onclick="loadPage('proximosjogos.html')">🏟️ Próximos Jogos</a></li>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/tabelacampeonato.html" onclick="loadPage('tabelacampeonato.html')">📅 Tabela Campeonato</a></li>
         </ul>
     </nav>
 
