--- a/agendadetreinos.html
+++ b/agendadetreinos.html
@@ -65,48 +65,69 @@
 
         /* Agenda */
         main {
-            margin-top: 120px; /* Ajusta a posição para não sobrepor a navbar */
+            margin-top: 120px; 
+            padding: 20px;
         }
 
         h2 {
-            font-size: 2rem;
-            color: #f6e33b;
-            margin-bottom: 20px;
             text-align: center;
+            color: #facc15;
+            margin-top: -50px; /* Valor negativo para subir */
+            font-size: 3.5rem;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(145deg, #facc15, #fbbf24);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 2px 4px 8px rgba(37, 158, 25, 0.3);
+            animation: glow 2s infinite alternate;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+            background-color: rgba(255, 255, 255, 0.05);
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.2);
         }
 
         table th, table td {
-            padding: 12px;
+            padding: 15px;
             text-align: center;
-            border: 1px solid #ddd;
+            border: 1px solid rgba(255,255,255,0.1);
         }
 
         table th {
-            background-color: #34495e;
-            color: white;
+            background-color: #0f172a;
+            color: #facc15;
+            font-weight: bold;
         }
 
         table tr:nth-child(even) {
-            background-color: #34495e;
+            background-color: rgba(255, 255, 255, 0.05);
+        }
+
+        table tr:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+            cursor: pointer;
         }
 
         footer {
-            margin-top: 30px;
+            margin-top: auto;
             text-align: center;
             font-size: 1rem;
             color: #d1d5db;
-            margin-top: auto;
+            padding: 10px;
+            background-color: #1e293b;
+            border-radius: 12px;
+            box-shadow: 0 -4px 12px rgba(0,0,0,0.2);
         }
 
         footer p {
             margin: 0;
         }
+        
     </style>
 </head>
 <body>
