Removendo alguns css nas paginas html e transferindo pra aba de styles.css

--- a/agendadetreinos.html
+++ b/agendadetreinos.html
@@ -4,131 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda de Treinos - Marapé Futebol Clube</title>
-    <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { 
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(145deg, #606c88, #3f4c6b);
-            padding: 20px;
-            color: #f8fafc;
-        }
+    <link rel="stylesheet" href="css/styles.css">
 
-        /* Navbar */
-        .navbar { 
-            background-color: #1e293b; 
-            padding: 10px; 
-            border-radius: 16px; 
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-            margin-bottom: 30px; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            border-bottom: 2px solid #ddad28;
-            border: 2px solid #ddad28;
-            width: 100vw;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-        .navbar ul { 
-            list-style: none; 
-            display: flex; 
-            gap: 10px; 
-        }
-        .navbar ul li { 
-            padding: 10px 15px; 
-            border-radius: 8px; 
-            background-color: #334155; 
-            cursor: pointer; 
-            transition: background-color 0.3s ease, transform 0.2s ease; 
-        }
-        .navbar ul li:hover { 
-            background-color: #3b82f6; 
-            transform: scale(1.1); 
-        }
-        .navbar a { 
-            text-decoration: none; 
-            color: #fff; 
-            padding: 10px 15px; 
-            border-radius: 8px; 
-            background-color: #334155; 
-            transition: background-color 0.3s ease, transform 0.2s ease; 
-        }
-        .navbar a:hover { 
-            background-color: #3b82f6; 
-            transform: scale(1.1); 
-        }
-
-        /* Agenda */
-        main {
-            margin-top: 120px; 
-            padding: 20px;
-        }
-
-        h2 {
-            text-align: center;
-            color: #facc15;
-            margin-top: -50px; /* Valor negativo para subir */
-            font-size: 3.5rem;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(145deg, #facc15, #fbbf24);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 2px 4px 8px rgba(37, 158, 25, 0.3);
-            animation: glow 2s infinite alternate;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            background-color: rgba(255, 255, 255, 0.05);
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 8px 24px rgba(0,0,0,0.2);
-        }
-
-        table th, table td {
-            padding: 15px;
-            text-align: center;
-            border: 1px solid rgba(255,255,255,0.1);
-        }
-
-        table th {
-            background-color: #0f172a;
-            color: #facc15;
-            font-weight: bold;
-        }
-
-        table tr:nth-child(even) {
-            background-color: rgba(255, 255, 255, 0.05);
-        }
-
-        table tr:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            cursor: pointer;
-        }
-
-        footer {
-            margin-top: auto;
-            text-align: center;
-            font-size: 1rem;
-            color: #d1d5db;
-            padding: 10px;
-            background-color: #1e293b;
-            border-radius: 12px;
-            box-shadow: 0 -4px 12px rgba(0,0,0,0.2);
-        }
-
-        footer p {
-            margin: 0;
-        }
-        
-    </style>
 </head>
 <body>
 
