--- a/paginajogadores.html
+++ b/paginajogadores.html
@@ -4,96 +4,6 @@
 
     <link rel="stylesheet" href="../front-end/css/styles.css">
 
-    <style>
-
-*       * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { 
-            font-family: 'Poppins', sans-serif; 
-            background: linear-gradient(145deg, #606c88, #3f4c6b);
-            padding: 20px;
-            color: #f8fafc;
-        }
-
-        .navbar { 
-            background-color: #1e293b; 
-            padding: 10px; 
-            border-radius: 16px; 
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-            margin-bottom: 30px; 
-            display: flex; 
-            gap: 25px;
-            justify-content: center; 
-            align-items: center; 
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 3;
-            width: 100vw;
-            border-bottom: 2px solid #ddad28;
-            border: 2px solid #ddad28;
-        }
-
-        .navbar ul { 
-            list-style: none; 
-            display: flex; 
-            gap: 15px; 
-        }
-
-        .navbar ul li { 
-            padding: 10px 10px; 
-            border-radius: 8px; 
-            background-color: #334155; 
-            cursor: pointer; 
-            transition: background-color 0.3s ease, transform 0.2s ease; 
-        }
-
-        .navbar ul li:hover { 
-            background-color: #3b82f6; 
-            transform: scale(1.1); 
-        }
-
-        .navbar a { 
-            text-decoration: none; 
-            color: #fff; 
-            padding: 10px 15px; 
-            border-radius: 8px; 
-            background-color: #334155; 
-            transition: background-color 0.3s ease, transform 0.2s ease; 
-        }
-
-        .navbar a:hover { 
-            background-color: #3b82f6; 
-            transform: scale(1.1); 
-        }
-
-        h1 { 
-            text-align: center; 
-            margin-top: 100px;
-            margin-bottom: 20px;
-            font-size: 2.5rem;
-            letter-spacing: 2px;
-        }
-
-        table {
-            margin-top: 80px;
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table th {
-            color: #000;
-            background-color: #ddad28;
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-
-        table td {
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-
-
-    </style>
 
 </head>
 
@@ -103,7 +13,7 @@
         <img src="C:\Users\Matheus\Pictures\times\marape.png" alt="Logo do Marapé FC">
     </div>
 
-    <h1> 🏅 ATLETAS MARAPÉ FUTEBOL CLUBE 🏅 </h1>
+    <h1>  ATLETAS MARAPÉ FUTEBOL CLUBE  </h1>
 
     <nav class="navbar">
         <ul>
