--- a/tabelacampeonato.html
+++ b/tabelacampeonato.html
@@ -4,120 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela de Campeonato de Futebol</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+    <link rel="stylesheet" href="../front-end/css/styles.css">
 
-        body {
-            font-family: Arial, sans-serif;
-            min-height: 100vh;
-            background: linear-gradient(145deg, #606c88, #3f4c6b);
-            padding-top: 100px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #facc15;
-            margin-top: 20px;
-            font-size: 3.5rem;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(145deg, #facc15, #fbbf24);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 2px 4px 8px rgba(37, 158, 25, 0.3);
-            animation: glow 2s infinite alternate;
-        }
-
-       
-
-        table {
-            width: 90%;
-            margin: 20px auto;
-            border-collapse: collapse;
-            background-color: #1e293b;
-            border-radius: 16px;
-            overflow: hidden;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-        }
-
-        th, td {
-            padding: 15px;
-            text-align: center;
-            color: #f1f5f9;
-        }
-
-        th {
-            background-color: #3b82f6;
-            font-size: 1.2rem;
-        }
-
-        tr:nth-child(even) {
-            background-color: #334155;
-        }
-
-        tr:nth-child(odd) {
-            background-color: #1e293b;
-        }
-
-        tr:hover {
-            background-color: #475569;
-            transition: background-color 0.3s ease;
-        }
-
-        .navbar {
-            background-color: #1e293b;
-            padding: 10px;
-            border-radius: 16px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-            margin-bottom: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: 2px solid #facc15;
-            width: 100vw;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-
-        .navbar ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-        }
-
-        .navbar ul li {
-            padding: 10px 10px;
-            border-radius: 8px;
-            background-color: #334155;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .navbar ul li:hover {
-            background-color: #3b82f6;
-            transform: scale(1.1);
-        }
-
-        .navbar a {
-            text-decoration: none;
-            color: #fff;
-            padding: 10px 15px;
-            border-radius: 8px;
-            background-color: #334155;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .navbar a:hover {
-            background-color: #3b82f6;
-            transform: scale(1.1);
-        }
-    </style>
-</head>
 <body>
 
     <header>
