--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -16,7 +16,7 @@
             left: 0;
             width: 100%;
             background-color: #000;
-            padding: 20px;
+            padding: px;
             text-align: center;
             z-index: 2;
             border-bottom: 2px solid #ddad28;
