--- a/cadastrar.html
+++ b/cadastrar.html
@@ -6,6 +6,9 @@
     <title>Cadastrar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+
+        /* BODY CADASTRAR */
+
         * {
             margin: 0;
             padding: 0;
@@ -28,6 +31,8 @@
             overflow: hidden; /* Impede a rolagem */
             font-family: 'Poppins', sans-serif; /* Adicionando a fonte Poppins */
         }
+
+            /* NAVBAR CADASTRAR */
 
         .navbar {
             background-color: #1e293b;
@@ -78,6 +83,7 @@
             background-color: #3b82f6;
             transform: scale(1.1);
         }
+            /* BODY CADASTRAR */
 
         body {
             margin-top: 60px; /* Espaço para o navbar fixo */
@@ -90,7 +96,8 @@
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
         }
-
+            /* LOGO CADASTRAR */
+            
         .logo img {
             max-width: 100%;
             height: auto;
