--- a/resultados.html
+++ b/resultados.html
@@ -6,94 +6,8 @@
         <title>Resultados do Time</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-        <style>
-            * { box-sizing: border-box; margin: 0; padding: 0; }
-            body { 
-                font-family: 'Poppins', sans-serif; 
-                background: linear-gradient(145deg, #606c88, #3f4c6b);
-                padding: 20px;
-                color: #f8fafc;
-            }
-            .navbar { 
-                background-color: #1e293b; 
-                padding: 8px; 
-                border-radius: 16px; 
-                box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); 
-                width: 100%;
-                border-bottom: 2px solid #ddad28;
-                border: 2px solid #ddad28;
-                position: fixed;
-                top: 0;
-                left: 0;
-                z-index: 1000;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .navbar ul { 
-                list-style: none; 
-                display: flex; 
-                gap: 15px; 
-            }
-            .navbar ul li { 
-                padding: 10px 10px; 
-                border-radius: 8px; 
-                background-color: #334155; 
-                cursor: pointer; 
-                transition: background-color 0.3s ease, transform 0.2s ease; 
-            }
-            .navbar ul li:hover { 
-                background-color: #3b82f6; 
-                transform: scale(1.1); 
-            }
-            .navbar a { 
-                text-decoration: none; 
-                color: #fff; 
-                padding: 10px 15px; 
-                border-radius: 8px; 
-                background-color: #334155; 
-                transition: background-color 0.3s ease, transform 0.2s ease; 
-            }
-            .navbar a:hover { 
-                background-color: #3b82f6; 
-                transform: scale(1.1); 
-            }
-            h1 { 
-                text-align: center; 
-                margin-top: 100px; /* Aumentado para dar espaço */
-                margin-bottom: 20px;
-                font-size: 2.5rem;
-                letter-spacing: 2px;
-            }
-            table {
-                width: 90vw;
-                max-width: 1200px;
-                margin: 100px auto 0; /* Espaçamento superior de 100px */
-                border-collapse: collapse;
-                background-color: #1e293b;
-                border-radius: 20px;
-                overflow: hidden;
-                box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-            }
-            th, td {
-                padding: 15px;
-                text-align: center;
-                border: 1px solid #334155;
-            }
-            th {
-                background-color: #334155;
-                color: #facc15;
-                font-weight: bold;
-            }
-            td img {
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
-
-        </style>
+        <link rel="stylesheet" href="../front-end/css/styles.css">
+      
     </head>
     <body>
 
