--- a/resultados.html
+++ b/resultados.html
@@ -33,30 +33,31 @@
             </tr>
         </thead>
         <tbody>
+            
             <tr>
-                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"></td>
                 <td>2 - 1</td>
-                <td><img src="C:\Users\Matheus\Pictures\times\duque.png"> Duque de Caxias F.C</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\duque.png"></td>
             </tr>
             <tr>
-                <td><img src="C:\Users\Matheus\Pictures\times\paulista.png"> Paulista Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\paulista.png"></td>
                 <td>3 - 3</td>
-                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"></td>
             </tr>
             <tr>
-                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"></td>
                 <td>2 - 1</td>
-                <td><img src="C:\Users\Matheus\Pictures\times\america.png"> América Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\america.png"></td>
             </tr>
             <tr>
-                <td><img src="C:\Users\Matheus\Pictures\times\atibaia.png"> Atibaia Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\atibaia.png"></td>
                 <td>2 - 5</td>
-                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"></td>
             </tr>
             <tr>
-                <td><img src="C:\Users\Matheus\Pictures\times\taubate.png"> Taubaté Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\taubate.png"></td>
                 <td>4 - 2</td>
-                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"> Marapé Futebol Clube</td>
+                <td><img src="C:\Users\Matheus\Pictures\times\marape.png"></td>
             </tr>
         </tbody>
     </table>
