--- a/tabelacampeonato.html
+++ b/tabelacampeonato.html
@@ -54,5 +54,13 @@
         </tbody>
     </table>
 
+    <!-- Rodapé -->
+    <footer>
+        <p>&copy; 2025 - Todos os direitos reservados</p>
+    </footer>
+
+    <!-- Script para carregar as paginas dinamicamente -->
+    <script src="scripts/javascript.js"></script>
+
 </body>
 </html>
