--- a/login.html
+++ b/login.html
@@ -5,103 +5,8 @@
     <meta name="Sistema de Jogadores" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body, html {
-            height: 100%;
-            width: 100%;
-        }
-
-        body {
-            background: linear-gradient(145deg, #606c88, #3f4c6b);
-            background-size: cover;
-            background-position: center center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            overflow: hidden; /* Impede a rolagem */
-        }
-
-        .navbar {
-            background-color: #1e293b;
-            padding: 0px 7px;
-            border-radius: 16px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-            margin-bottom: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 2px solid #ddad28;
-            border: 2px solid #ddad28;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-
-        .navbar ul {
-            list-style: none;
-            display: flex;
-            gap: 30px;
-            padding-left: 0;
-        }
-
-        .navbar ul li {
-            display: flex; /* Permite centralizar o conteúdo no li */
-            align-items: center; /* Centraliza o texto verticalmente */
-            justify-content: center; /* Centraliza o conteúdo horizontalmente */
-            border-radius: 12px; /* Bordas arredondadas mais suaves */
-            background-color: #334155; /* Cor de fundo consistente */
-            transition: background-color 0.3s ease, transform 0.2s ease, padding 0.2s ease; /* Efeito de transição para a cor e padding */
-            cursor: pointer; /* Para o mouse indicar que é clicável */
-            margin-top: 4px;
-        }
-
-        .navbar a {
-            text-decoration: none;
-            color: #fff;
-            padding: 10px 15px;
-            border-radius: 8px;
-            background-color: #334155;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .navbar a:hover {
-            background-color: #3b82f6;
-            transform: scale(1.1);
-        }
-
-        body {
-            margin-top: 60px; /* Espaço para o navbar fixo */
-        }
-
-        .container {
-            max-width: 500px;
-            width: 100%;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-        }
-
-        .logo img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 20px;
-        }
-
-        input.form-control {
-            border: 1px solid black; /* Contorno preto */
-            border-radius: 5px; /* Arredondamento das bordas */
-        }
-        
-    </style>
+    <link rel="stylesheet" href="../front-end/css/styles.css">
+    
 </head>
 <body>
 
