--- a/paginajogadores.html
+++ b/paginajogadores.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/templateLogado.html#" onclick="loadPage('inicio.html')">🏠 Ínicio</a></li>
+            <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/templateLogado.html" onclick="loadPage('inicio.html')">🏠 Ínicio</a></li>
             <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/resultados.html" onclick="loadPage('resultados.html')">📅 Resultados</a></li>
             <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/contatos.html" onclick="loadPage('contatos.html')">📞 Contatos</a></li>
             <li><a href="file:///C:/dev/project/SistemaJogadores/front-end/agendadetreinos.html" onclick="loadPage('agendadetreinos.html')">🗓️ Agenda de treinos</a></li>
